attempting to fix the spacing and layout of the careers landing page (without breaking the careers detail page) [#531]

--- a/src/sass/content/_careers.scss
+++ b/src/sass/content/_careers.scss
@@ -1,6 +1,6 @@
 .careers {
 	@extend %side-padding;
-	@extend %wrapper;
+	// @extend %wrapper;
 	margin-top: 3em;
 
 	&--single__entry-content {
@@ -9,7 +9,11 @@
 
 	&__header--section {
 		border-bottom: 1px solid map-get($gray_map, light);
-		margin-bottom: 3rem;
+		margin: {
+			left: percentage(90px/1600px);
+			right: percentage(90px/1600px);
+			bottom: 3rem;
+		}
 
 		&.no-bottom-margin {
 			border-bottom: none;
@@ -30,10 +34,9 @@
 	&__header--article {
 
 		h2 {
-			font: {
-				size: ce(22px);
-			}
+			@extend %roboto-thin;
 			margin-bottom: 1em;
+			text-transform: none;
 		}
 	}
 
@@ -84,12 +87,15 @@
 	 * Layout
 	 */
 	&__row {
+		@extend %side-padding;
+		margin-bottom: 3rem;
 		@include container;
 	}
 
 	&__article {
 		@include breakpoint($bp-medium) {
 			@include gallery(12);
+			@include gutter(2em);
 		}
 
 		@include breakpoint($bp-large) {
